--- a/CSS/main.css
+++ b/CSS/main.css
@@ -14,7 +14,7 @@ ____COLORS____
 body {
   height: 100vh;
 	/*background-size: cover;*/
-  background: rgba(255, 80, 80, .6) url("/Users/alanwhite/Google Drive/Code Projects/ZED/Projects_Practice/Typhoid Beach/Images/Typhoid-Back-Green.png") no-repeat center fixed;
+  background: rgba(255, 80, 80, .6) url("/Users/alanwhite/Google Drive/Code Projects/ZED/TYPHOID BEACH/Images/Typhoid-Back-Green.png") no-repeat center fixed;
   font-family: "Poiret One", sans-serif;
   font-weight: bold;
 }
