--- a/CSS/main.css
+++ b/CSS/main.css
@@ -130,6 +130,85 @@ li span {
   border-bottom: 1px solid rgba(82, 255, 212, 0.5);
 }
 
+/*********************************************************************************
+                        Carousel Styles--Merch
+********************************************************************************/
+
+.carousel-control .icon-prev, .carousel-control .icon-next,
+.carousel-control .glyphicon-chevron-left, .carousel-control
+.glyphicon-chevron-right, .glyphicon-circle-arrow-left {
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    z-index: 5;
+}
+
+.carousel-indicators {
+  background-color: rgba(0, 0, 0, 0)
+}
+
+.carousel-indicators .active {
+  background-color: #52ffd4;
+  border: 1px solid #fff;
+  box-shadow: 0 0 5px #000;
+}
+
+.carousel-indicators li {
+    background-color: #000\9;
+    background-color: rgba(0, 0, 0, .6);
+    border: 1px solid #52ffd4;
+    border-radius: 10px;
+}
+
+/*********************************************************************************
+                        Contact Form Styles
+********************************************************************************/
+
+.contact {
+  background-color: rgba(0, 0, 0, .6);
+  color: #52ffd4;
+}
+.form-horizontal .form-group {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
+.input-group-addon {
+    padding: 6px 12px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 1;
+    color: #52ffd4;
+    text-align: center;
+    background-color: rgba(0, 0, 0, .6);
+    border: 1px solid #52ffd4;
+    border-radius: 4px;
+}
+
+.form-control {
+    display: block;
+    width: 100%;
+    height: 34px;
+    padding: 6px 12px;
+    font-size: 14px;
+    line-height: 1.42857143;
+    color: #52ffd4;
+    background-color: rgba(0, 0, 0, .6);
+    background-image: none;
+    border: 1px solid #52ffd4;
+    border-radius: 4px;
+}
+
+input {
+  border-color: #52ffd4;
+}
+
+input:-webkit-autofill {
+    background-color: rgba(0, 0, 0, .6);
+    background-image: none;
+    color: #52ffd4;
+}
+
 textarea:focus,
 input[type="text"]:focus,
 input[type="password"]:focus,
@@ -149,6 +228,145 @@ input[type="color"]:focus,
   border-color: #52ffd4;
   box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(255, 255, 255, 0.6);
   outline: 0 none;
+}
+
+.has-error .checkbox,
+.has-error .checkbox-inline,
+.has-error .control-label,
+.has-error .help-block,
+.has-error .radio,
+.has-error .radio-inline,
+.has-error.checkbox label,
+.has-error.checkbox-inline label,
+.has-error.radio label,
+.has-error.radio-inline label {
+  color: #ff5050;
+  text-shadow: #52ffd4 .075px 0 10px;
+  font-family: serif;
+}
+
+.has-error .form-control,
+.has-error .form-control:focus {
+    color: #ff5050;
+    border-color: #ff5050;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+.has-error .form-control:focus {
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset, 0 0 8px rgba(255, 255, 255, 0.6);
+}
+
+.has-error .form-control-feedback {
+    color: #ff5050;
+}
+
+.has-error .input-group-addon {
+    color: #ff5050;
+    background-color: rgba(0, 0, 0, .6);
+    border-color: #ff5050;
+}
+
+.has-success .checkbox,
+.has-success .checkbox-inline,
+.has-success .control-label,
+.has-success .help-block,
+.has-success .radio,
+.has-success .radio-inline,
+.has-success.checkbox label,
+.has-success.checkbox-inline label,
+.has-success.radio label,
+.has-success.radio-inline label {
+    color: #52ffd4;
+}
+
+.has-success .form-control,
+.has-success .form-control:focus {
+    border-color: #52ffd4;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+}
+
+.has-success .form-control-feedback {
+    color: #52ffd4;
+}
+
+.has-success .input-group-addon {
+    color: #52ffd4;
+    background-color: rgba(0, 0, 0, .6);
+    border-color: #52ffd4;
+}
+
+.btn:focus,
+.btn:active:focus,
+.btn.active:focus {
+    outline: 0 none;
+}
+
+.btn-warning.disabled.focus,
+.btn-warning.disabled:focus,
+.btn-warning.disabled:hover,
+.btn-warning[disabled].focus,
+.btn-warning[disabled]:focus,
+.btn-warning[disabled]:hover,
+fieldset[disabled] .btn-warning.focus,
+fieldset[disabled] .btn-warning:focus,
+fieldset[disabled] .btn-warning:hover {
+    color: #ff5050;
+    background-color: rgba(0, 0, 0, .6);
+    border-color: #ff5050;
+}
+
+.btn-warning:active:focus,
+.btn-warning:focus,
+.btn-warning:hover {
+  color: rgba(0, 0, 0, .6);
+  background-color: #52ffd4;
+  border-color: rgba(0, 0, 0, .6);
+  box-shadow: 0 0 5px #fff;
+}
+
+.btn-warning {
+    color: #52ffd4;
+    background-color: rgba(0, 0, 0, .6);
+    border-color: #52ffd4;
+}
+
+.btn-warning:hover, .btn-warning.hover {
+    color: #52ffd4;
+    background-color: rgba(0, 0, 0, 1);
+    border-color: #52ffd4;
+    text-shadow: 0 0 5px #fff;
+    box-shadow: 0 0 5px #fff;
+}
+
+legend {
+  padding-left: 10px;
+  padding-right: 10px;
+  color: #52ffd4;
+  border-bottom: 1px solid #52ffd4;
+}
+
+.alert {
+  border: none;
+}
+
+.alert-success {
+    color: #52ffd4;
+    background-color: rgba(0, 0, 0, .6);
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    border-color: #52ffd4;
+    border-radius: 0;
+}
+
+#success_message {
+    display: none;
+}
+
+#contact {
+  margin: 20px 0px;
+  padding: 20px 0px;
 }
 
 /*********************************************************************************
@@ -230,108 +448,6 @@ input[type="color"]:focus,
   -webkit-transform: scale(1);
   -ms-transform: scale(1);
   transform: scale(1);
-}
-
-/*********************************************************************************
-                        Carousel Styles--Merch
-********************************************************************************/
-
-.carousel-control .icon-prev, .carousel-control .icon-next,
-.carousel-control .glyphicon-chevron-left, .carousel-control
-.glyphicon-chevron-right, .glyphicon-circle-arrow-left {
-    display: inline-block;
-    position: absolute;
-    top: 50%;
-    z-index: 5;
-}
-
-.carousel-indicators {
-  background-color: rgba(0, 0, 0, 0)
-}
-
-.carousel-indicators .active {
-  background-color: #52ffd4;
-  border: 1px solid #fff;
-  box-shadow: 0 0 5px #000;
-}
-
-.carousel-indicators li {
-    background-color: #000\9;
-    background-color: rgba(0, 0, 0, .6);
-    border: 1px solid #52ffd4;
-    border-radius: 10px;
-}
-
-/*********************************************************************************
-                        Contact Form Styles
-********************************************************************************/
-
-.contact {
-  background-color: rgba(0, 0, 0, .6);
-  color: #52ffd4;
-}
-.form-horizontal .form-group {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.input-group-addon {
-    padding: 6px 12px;
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 1;
-    color: #52ffd4;
-    text-align: center;
-    background-color: rgba(0, 0, 0, .6);
-    border: 1px solid #52ffd4;
-    border-radius: 4px;
-}
-
-.form-control {
-    display: block;
-    width: 100%;
-    height: 34px;
-    padding: 6px 12px;
-    font-size: 14px;
-    line-height: 1.42857143;
-    color: #52ffd4;
-    background-color: rgba(0, 0, 0, .6);
-    background-image: none;
-    border: 1px solid #52ffd4;
-    border-radius: 4px;
-}
-
-input {
-  border-color: #52ffd4;
-}
-
-.btn-warning {
-    color: #52ffd4;
-    background-color: rgba(0, 0, 0, .6);
-    border-color: #52ffd4;
-}
-
-.btn-warning:hover {
-    color: #52ffd4;
-    background-color: rgba(0, 0, 0, 1);
-    border-color: #52ffd4;
-    text-shadow: 0 0 5px #fff;
-    box-shadow: 0 0 5px #fff;
-}
-
-legend {
-  padding-left: 10px;
-  padding-right: 10px;
-  color: #52ffd4;
-  border-bottom: 1px solid #52ffd4;
-}
-#success_message {
-    display: none;
-}
-
-#contact {
-  margin: 20px 0px;
-  padding: 20px 0px;
 }
 
 /*********************************************************************************
