Added script link for form validation. Styled Validation to color scheme. Added alert to validation rules to explain to user when no action on form submition has been taken. Updated README.md to explain current state of form action.

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -130,6 +130,7 @@ li span {
   border-bottom: 1px solid rgba(82, 255, 212, 0.5);
 }
 
+
 /*********************************************************************************
                         Carousel Styles--Merch
 ********************************************************************************/
@@ -497,3 +498,9 @@ legend {
                           Media Queries
 *********************************************************************************
 ********************************************************************************/
+
+@media screen and (min-width: 994px) {
+  td {
+    text-align: center;
+  }
+}
