--- a/CSS/main.css
+++ b/CSS/main.css
@@ -361,7 +361,21 @@ legend {
     border-radius: 0;
 }
 
+.alert-danger {
+    color: #ff5050;
+    font-family: serif;
+    background-color: rgba(0, 0, 0, .6);
+    border-top: 1px solid transparent;
+    border-bottom: 1px solid transparent;
+    border-color: #ff5050;
+    border-radius: 0;
+}
+
 #success_message {
+    display: none;
+}
+
+#error_message {
     display: none;
 }
 
