simplified bg on mobile

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -641,7 +641,7 @@ legend {
 
   body {
     height: 100%;
-    background: rgba(255, 80, 80, .6);
+    background: linear-gradient( to bottom, rgba(255, 80, 80, 1), rgba(82, 255, 212, .5)) no-repeat center fixed;
     font-family: "Poiret One", sans-serif;
     font-weight: bold;
   }
