--- a/CSS/main.css
+++ b/CSS/main.css
@@ -641,6 +641,9 @@ legend {
 
   body {
     height: 100%;
+    background: -webkit-linear-gradient( to bottom, rgba(255, 80, 80, 1), rgba(82, 255, 212, .5)) no-repeat center fixed;
+    background: -o-linear-gradient( to bottom, rgba(255, 80, 80, 1), rgba(82, 255, 212, .5)) no-repeat center fixed;
+    background: -moz-linear-gradient( to bottom, rgba(255, 80, 80, 1), rgba(82, 255, 212, .5)) no-repeat center fixed;
     background: linear-gradient( to bottom, rgba(255, 80, 80, 1), rgba(82, 255, 212, .5)) no-repeat center fixed;
     font-family: "Poiret One", sans-serif;
     font-weight: bold;
